[gd_scene load_steps=18 format=2]

[ext_resource path="res://Assets/Images/Splash3.png" type="Texture" id=1]
[ext_resource path="res://Assets/Theme/title_container_theme.tres" type="Theme" id=2]
[ext_resource path="res://Assets/Fonts/OutlineTitleFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Assets/Fonts/DefaultFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://Scenes/TitleScene/title_scene.gd" type="Script" id=5]
[ext_resource path="res://Assets/Fonts/SolidTitleFont.tres" type="DynamicFont" id=6]
[ext_resource path="res://Scenes/TitleScene/file_upload.gd" type="Script" id=7]
[ext_resource path="res://Scenes/TitleScene/LoadProgress.tscn" type="PackedScene" id=8]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 2.0
content_margin_right = 2.0
content_margin_top = 2.0
content_margin_bottom = 2.0
bg_color = Color( 0.627451, 0.513726, 0.352941, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 2.0
content_margin_right = 2.0
content_margin_top = 2.0
content_margin_bottom = 2.0
bg_color = Color( 0.870588, 0.662745, 0.364706, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 2.0
content_margin_right = 2.0
content_margin_top = 2.0
content_margin_bottom = 2.0
bg_color = Color( 0.729412, 0.529412, 0.235294, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 4.0
content_margin_right = 2.0
content_margin_top = 2.0
content_margin_bottom = 2.0
bg_color = Color( 0.870588, 0.662745, 0.364706, 1 )

[sub_resource type="StyleBoxFlat" id=5]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 10.0
content_margin_bottom = 5.0
bg_color = Color( 0.870588, 0.662745, 0.364706, 1 )
border_width_top = 5
border_color = Color( 0, 0, 0, 0 )
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 1 )
border_width_top = 1
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.870588, 0.662745, 0.364706, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.560784, 0.294118, 0.0588235, 1 )
border_width_top = 20
border_color = Color( 0.870588, 0.662745, 0.364706, 1 )
expand_margin_top = 20.0

[sub_resource type="Theme" id=9]
default_font = ExtResource( 4 )
Button/colors/font_color = Color( 0, 0, 0, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0, 0, 0, 1 )
Button/colors/font_color_pressed = Color( 0, 0, 0, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = SubResource( 1 )
Button/styles/focus = null
Button/styles/hover = SubResource( 2 )
Button/styles/normal = SubResource( 2 )
Button/styles/pressed = SubResource( 3 )
LineEdit/colors/clear_button_color = Color( 0.88, 0.88, 0.88, 1 )
LineEdit/colors/clear_button_color_pressed = Color( 1, 1, 1, 1 )
LineEdit/colors/cursor_color = Color( 0, 0, 0, 1 )
LineEdit/colors/font_color = Color( 0, 0, 0, 1 )
LineEdit/colors/font_color_selected = Color( 0, 0, 0, 1 )
LineEdit/colors/font_color_uneditable = Color( 0.88, 0.88, 0.88, 0.5 )
LineEdit/colors/selection_color = Color( 0.49, 0.49, 0.49, 1 )
LineEdit/constants/minimum_spaces = 12
LineEdit/fonts/font = null
LineEdit/icons/clear = null
LineEdit/styles/focus = null
LineEdit/styles/normal = SubResource( 4 )
LineEdit/styles/read_only = null
OptionButton/colors/font_color = Color( 0, 0, 0, 1 )
OptionButton/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
OptionButton/colors/font_color_hover = Color( 0, 0, 0, 1 )
OptionButton/colors/font_color_pressed = Color( 0, 0, 0, 1 )
OptionButton/constants/arrow_margin = 2
OptionButton/constants/hseparation = 2
OptionButton/fonts/font = null
OptionButton/icons/arrow = null
OptionButton/styles/disabled = null
OptionButton/styles/focus = SubResource( 4 )
OptionButton/styles/hover = SubResource( 4 )
OptionButton/styles/normal = SubResource( 4 )
OptionButton/styles/pressed = SubResource( 4 )
PopupMenu/colors/font_color = Color( 0, 0, 0, 1 )
PopupMenu/colors/font_color_accel = Color( 0.7, 0.7, 0.7, 0.8 )
PopupMenu/colors/font_color_disabled = Color( 0.4, 0.4, 0.4, 0.8 )
PopupMenu/colors/font_color_hover = Color( 0, 0, 0, 1 )
PopupMenu/constants/hseparation = 4
PopupMenu/constants/vseparation = 4
PopupMenu/fonts/font = null
PopupMenu/icons/checked = null
PopupMenu/icons/radio_checked = null
PopupMenu/icons/radio_unchecked = null
PopupMenu/icons/submenu = null
PopupMenu/icons/unchecked = null
PopupMenu/styles/hover = null
PopupMenu/styles/labeled_separator_left = null
PopupMenu/styles/labeled_separator_right = null
PopupMenu/styles/panel = SubResource( 5 )
PopupMenu/styles/panel_disabled = null
PopupMenu/styles/separator = SubResource( 6 )
Tree/colors/custom_button_font_highlight = Color( 0, 0, 0, 1 )
Tree/colors/drop_position_color = Color( 1, 0.301961, 0.2, 1 )
Tree/colors/font_color = Color( 0, 0, 0, 1 )
Tree/colors/font_color_selected = Color( 0, 0, 0, 1 )
Tree/colors/guide_color = Color( 0, 0, 0, 0.1 )
Tree/colors/relationship_line_color = Color( 0.27, 0.27, 0.27, 1 )
Tree/colors/title_button_color = Color( 0, 0, 0, 1 )
Tree/constants/button_margin = 4
Tree/constants/draw_guides = 1
Tree/constants/draw_relationship_lines = 0
Tree/constants/hseparation = 4
Tree/constants/item_margin = 12
Tree/constants/scroll_border = 4
Tree/constants/scroll_speed = 12
Tree/constants/vseparation = 4
Tree/fonts/font = null
Tree/fonts/title_button_font = null
Tree/icons/arrow = null
Tree/icons/arrow_collapsed = null
Tree/icons/checked = null
Tree/icons/select_arrow = null
Tree/icons/unchecked = null
Tree/icons/updown = null
Tree/styles/bg = SubResource( 7 )
Tree/styles/bg_focus = null
Tree/styles/button_pressed = null
Tree/styles/cursor = null
Tree/styles/cursor_unfocused = null
Tree/styles/custom_button = null
Tree/styles/custom_button_hover = null
Tree/styles/custom_button_pressed = null
Tree/styles/selected = null
Tree/styles/selected_focus = null
Tree/styles/title_button_hover = null
Tree/styles/title_button_normal = null
Tree/styles/title_button_pressed = null
WindowDialog/colors/title_color = Color( 0, 0, 0, 1 )
WindowDialog/constants/close_h_ofs = 18
WindowDialog/constants/close_v_ofs = 18
WindowDialog/constants/scaleborder_size = 4
WindowDialog/constants/title_height = 20
WindowDialog/fonts/title_font = null
WindowDialog/icons/close = null
WindowDialog/icons/close_highlight = null
WindowDialog/styles/panel = SubResource( 8 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.33484
margin_right = -1.33484
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="."]
margin_left = 50.0
margin_top = 50.0
margin_right = 974.0
margin_bottom = 598.0
rect_min_size = Vector2( 400, 140 )
theme = SubResource( 9 )
window_title = "Open File(s)"
resizable = true
mode = 1
access = 2
filters = PoolStringArray( "*.json ; JSON files" )
current_dir = "/Users/sahil/Documents/GitHub/mm27/visualizer/visualizer"
current_path = "/Users/sahil/Documents/GitHub/mm27/visualizer/visualizer/"
script = ExtResource( 7 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="MarginContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 974.0
margin_bottom = 598.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleContainer" type="CenterContainer" parent="MarginContainer/Menu"]
margin_right = 924.0
margin_bottom = 175.0

[node name="SolidTitle" type="Label" parent="MarginContainer/Menu/TitleContainer"]
margin_left = 157.0
margin_right = 767.0
margin_bottom = 175.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.870588, 0.662745, 0.364706, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.392157 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 4
text = "Coders
of the Corn"
align = 1

[node name="OutlineTitle" type="Label" parent="MarginContainer/Menu/TitleContainer/SolidTitle"]
margin_right = 610.0
margin_bottom = 175.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.560784, 0.294118, 0.0588235, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 4
text = "Coders
of the Corn"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterRow" type="CenterContainer" parent="MarginContainer/Menu"]
margin_top = 179.0
margin_right = 924.0
margin_bottom = 525.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Buttons" type="HBoxContainer" parent="MarginContainer/Menu/CenterRow"]
margin_left = 286.0
margin_top = 136.0
margin_right = 637.0
margin_bottom = 209.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 50

[node name="StartButton" type="Button" parent="MarginContainer/Menu/CenterRow/Buttons"]
margin_right = 175.0
margin_bottom = 73.0
text = "START"
flat = true

[node name="QuitButton" type="Button" parent="MarginContainer/Menu/CenterRow/Buttons"]
margin_left = 225.0
margin_right = 351.0
margin_bottom = 73.0
text = "QUIT"
flat = true

[node name="Version" type="Label" parent="MarginContainer/Menu"]
margin_top = 529.0
margin_right = 924.0
margin_bottom = 548.0
custom_colors/font_color = Color( 0.968627, 0.968627, 0.968627, 1 )
text = "MechMania 27 | Version 2.1.0"
align = 1

[node name="LoadProgress" parent="MarginContainer" instance=ExtResource( 8 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 50.0
margin_top = 50.0
margin_right = 974.0
margin_bottom = 598.0

[connection signal="file_selected" from="FileDialog" to="FileDialog" method="_on_FileDialog_file_selected"]
[connection signal="files_selected" from="FileDialog" to="FileDialog" method="_on_FileDialog_files_selected"]
[connection signal="gamelog_ready" from="FileDialog" to="." method="_on_FileDialog_gamelog_ready"]
[connection signal="pressed" from="MarginContainer/Menu/CenterRow/Buttons/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="MarginContainer/Menu/CenterRow/Buttons/QuitButton" to="." method="_on_QuitButton_pressed"]
